--- a/sections/featured-collection-cl.liquid
+++ b/sections/featured-collection-cl.liquid
@@ -493,7 +493,7 @@
   ],
   "presets": [
     {
-      "name": "t:sections.featured-collection.presets.name"
+      "name": "CL Feature collection"
     }
   ]
 }
