--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -10,21 +10,13 @@
 
 {% endpaginate %}
 {% schema %}
-    {
-      "name": "Ingredient Index",
-      "settings": [
+{
+    "name": "CL Ingredient list",
+    "settings": [],
+    "presets": [
         {
-          "type": "text",
-          "id": "title",
-          "label": "Title",
-          "default": "Ingredients"
+        "name": "A section that renders ingredients in a list"
         }
-      ],
-      "presets": [
-        {
-          "name": "Default",
-          "category": "Custom"
-        }
-      ]
-    }
-    {% endschema %}
+    ]
+}
+{% endschema %}
