--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -1,6 +1,6 @@
 {% paginate shop.metaobjects.ingredients.values by 25 %}
   
-    {% for metaobject in shop.metaobjects.chef.values %}
+    {% for metaobject in shop.metaobjects.ingredients.values %}
       <li>
         {{ metaobject.name | link_to: metaobject.system.url }}
       </li>
