--- a/sections/ingredient-index.liquid
+++ b/sections/ingredient-index.liquid
@@ -1,14 +1,14 @@
-{% paginate shop.metaobjects.ingredients.values by 25 %}
-  
-    {% for metaobject in shop.metaobjects.ingredients.values %}
-      <li>
-        {{ metaobject.name | link_to: metaobject.system.url }}
-      </li>
-    {% endfor %}
-  
-{{ paginate | default_pagination }}
-
-{% endpaginate %}
+<div class="page-width">
+    {% paginate shop.metaobjects.ingredients.values by 100 %}
+        <div class="twcss-grid twcss-grid-cols-1 md:twcss-grid-cols-3 twcss-gap-4">
+            {% for metaobject in shop.metaobjects.ingredients.values %}
+            <div class="twcss-bg-white twcss-p-4 twcss-shadow twcss-rounded-lg">
+                {% render 'card-ingredient', card_ingredient: metaobject %}
+            </div>
+            {% endfor %}
+        </div>
+    {% endpaginate %}
+</div>
 {% schema %}
 {
     "name": "CL Ingredient list",
