--- a/assets/app.css
+++ b/assets/app.css
@@ -352,6 +352,16 @@ form#bh-sl-user-location .scasl-search-btn {
   margin-right: 0.25rem;
 }
 
+.ingredient__search {
+  margin: auto;
+}
+
+@media (min-width: 750px) {
+  .ingredient__search {
+    width: 50%;
+  }
+}
+
 /*! tailwindcss v3.4.11 | MIT License | https://tailwindcss.com*/
 
 /*
